--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
                     <p>Hi I Am Mohammad Saizan Ansari Student At Shri Ram Group Of Institutions,Jabalpur Currently Pursuing My Bachelors Of Technology In The Field Of Artificial Intelligence & Data Science.
                     </p>
                     <div class="tab-title">
-                        <p class="tab-links active-link" onclick="opentab('Skills')">Skils</p>
+                        <p class="tab-links active-link" onclick="opentab('Skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('Projects')">Projects</p>
                         <p class="tab-links" onclick="opentab('Education')">Education</p>
                     </div>
                     
                     <div class="tab-contents active-tab" id="Skills">
                         <ul>
-                            <li><span>Python</span><br>Basics of Pyhton</li>
+                            <li><span>Python</span><br>Basics of Python</li>
                             <li><span>Frontend Development</span><br>Web Development Using HTML, CSS, JavaScript.</li>
                             <li><span>Machine Learning</span><br>Machine Learning For Model Development.</li>
                             <li><span>Data Science</span><br>Data Science For Data Analysis, Bussiness Intelligence.</li>
@@ -91,8 +91,8 @@
             <div class="work">
                 <img src="Images/work2.jpg">
                 <div class="layer">
-                    <h3>E-commerse WebSite For Shoes</h3>
-                    <p>The website helps the saller to sale the shoes on this website and users to purchase.</p>
+                    <h3>Full Stack E-commerse WebSite </h3>
+                    <p>The website helps the saller to sale on this website and users to purchase.</p>
                     <a href="#"><i class="fa fa-external-link" aria-hidden="true"></i></a>
                 </div>
             </div>
@@ -114,10 +114,8 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="Sub-title">Contact Me</h1>
-                <p><i class="fa-solid fa-paper-plane"></i>contact@example.com</p>
-                <p><i class="fa-solid fa-phone"></i>0123456789</p>
+                <p><i class="fa-solid fa-paper-plane"></i>saizanans317@gmail.com</p>
                 <div class="social-icon">
-                    <a href=""><i class="fab fa-facebook"></i></a>
                     <a href="https://www.linkedin.com/in/saizan-ansari/"><i class="fab fa-linkedin"></i></a>
                     <a href="https://x.com/ansari_saizan"><i class="fab fa-twitter"></i></a>
                     <a href=""><i class="fab fa-instagram"></i></a>
