--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <div class="social-icon">
                     <a href="https://www.linkedin.com/in/saizan-ansari/"><i class="fab fa-linkedin"></i></a>
                     <a href="https://x.com/ansari_saizan"><i class="fab fa-twitter"></i></a>
-                    <a href=""><i class="fab fa-instagram"></i></a>
+                    <a href="https://github.com/MoSaizanCoder"><i class="fa-brands fa-github"></i></a>
                 </div>
                 <a href="Images/Mohammad Saizan Ansari.pdf" download class="btn btn2">Download Resume</a>
             </div>
