--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saizan-Protfolio</title>
+    <title>Saizan-Portfolio</title>
     <link rel="stylesheet" href="style.css"
 </head>
 <body>
@@ -15,7 +15,7 @@
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a> </li>
                     <li><a href="#about">About</a> </li>
-                    <li><a href="#portfolio">Protfolio</a> </li>
+                    <li><a href="#portfolio">Portfolio</a> </li>
                     <li><a href="#contact">Contact</a> </li>
                     <i class="fa-solid fa-circle-xmark" onclick="closemenu()"></i>
                 </ul>
