--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="layer">
                     <h3>Machine Learning Model For Credit Card Fraud Detection</h3>
                     <p>This ML model helps to find the credit card transaction was fraudulent or legit using various machine learning algorithms like linear regression and more.</p>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://colab.research.google.com/drive/19C9tscZoG8PzeF3m74dm_HCkefh8ad6W?usp=sharing"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
