--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="layer">
                     <h3>Full Stack E-commerse WebSite </h3>
                     <p>The website helps the saller to sale on this website and users to purchase.</p>
-                    <a href="#"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+                    <a href="Paste Link Here"><i class="fa fa-external-link" aria-hidden="true"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -101,7 +101,7 @@
                 <div class="layer">
                     <h3>Deep Learning Model For Self Driving Car Simulation</h3>
                     <p>This DL model is used to simulate the self driving car which is usefull for the making of self driving car it wroks on the Artificial Neural Network which is helpfull in the decision making.</p>
-                    <a href="#"> <i class="fas fa-external-link-alt"></i></a>
+                    <a href="Paste Link Here"> <i class="fas fa-external-link-alt"></i></a>
                 </div>
             </div> 
         </div>
