--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
                         <ul>
                             <li><span>Machine Learning Model</span><br> ML Model For Credit Card Fraud Detection</li>
                             <li><span>WebSite Development</span><br>Developing A Full Stack Ecommerce WebSite</li>
-                            <li><span>Deep Learning Model</span><br>DL Model For Self Driving Car Simulation</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="Education">
@@ -91,7 +90,7 @@
             <div class="work">
                 <img src="Images/work2.jpg">
                 <div class="layer">
-                    <h3>Full Stack E-commerse WebSite </h3>
+                    <h3>Amazon Landing Page Clone</h3>
                     <p>The website helps the saller to sale on this website and users to purchase.</p>
                     <a href="Paste Link Here"><i class="fa fa-external-link" aria-hidden="true"></i></a>
                 </div>
@@ -99,8 +98,8 @@
             <div class="work">
                 <img src="Images/work1.jpg">
                 <div class="layer">
-                    <h3>Deep Learning Model For Self Driving Car Simulation</h3>
-                    <p>This DL model is used to simulate the self driving car which is usefull for the making of self driving car it wroks on the Artificial Neural Network which is helpfull in the decision making.</p>
+                    <h3>Deep Learning Model </h3>
+                    <p>This DL model is used to </p>
                     <a href="Paste Link Here"> <i class="fas fa-external-link-alt"></i></a>
                 </div>
             </div> 
