--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="tab-contents" id="Projects">
                         <ul>
                             <li><span>Machine Learning Model</span><br> ML Model For Credit Card Fraud Detection</li>
-                            <li><span>WebSite Development</span><br>Developing A Full Stack Ecommerce WebSite</li>
+                            <li><span>WebSite Development</span><br> Amazon Clone Landing Page </li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="Education">
