--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="layer">
                     <h3>Amazon Landing Page Clone</h3>
                     <p>The website helps the saller to sale on this website and users to purchase.</p>
-                    <a href="Paste Link Here"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+                    <a href="https://mosaizancoder.github.io/Amazon-Landing-Page-Clone/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
                 </div>
             </div>
             <div class="work">
