--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="Images/work1.jpg">
+                <img src="Images/Dog-Cat">
                 <div class="layer">
                     <h3>Deep Learning Model </h3>
                     <p>This DL model is used to </p>
