--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <a href="https://x.com/ansari_saizan"><i class="fab fa-twitter"></i></a>
                     <a href="https://github.com/MoSaizanCoder"><i class="fa-brands fa-github"></i></a>
                 </div>
-                <a href="Images/Mohammad Saizan Ansari.pdf" download class="btn btn2">Download Resume</a>
+                <a href="Images/Data Analyst Resume.pdf" download class="btn btn2">Download Resume</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
