updated images and added variable for color scheme

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="Images/Picsart_24-06-30_15-37-08-542.png" class="logo">
+                <h1><span>M</span>o<span>S</span>aizan</h1>
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a> </li>
                     <li><a href="#about">About</a> </li>
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="Images/IMG_3965.JPG">
+                    <img src="Images/Image 1.jpeg">
                 </div>
                 <div class="about-col-2">
                     <h1 class="Sub-title">About Me</h1>
